# reis_software

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  fly.toml  pyproject.toml
migrations/: env.py
migrations/versions/: 3da47cc9da26_modify_due_date.py  84275f9a1e3a_create_users_table_and_tasks_table.py  a8d6f50272a7_add_soft_delete.py
src/: app.py  database.py  models.py  schemas.py  security.py  settings.py
src/handlers/: base.py
src/handlers/auth/: auth_handler.py
src/handlers/tasks/: tasks_handler.py
src/handlers/user/: user_handler.py
src/routers/: task.py  token.py
src/services/: auth_service.py  task_service.py  user_service.py
src/utils/: logger.py
