[project]
name = "reis"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Hemrique Lima Silva",email = "pedrolima828@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]


[tool.taskipy.tasks]
run = 'uvicorn src.app:app --host 127.0.0.1 --port 8000 --reload'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
